adding the docker image from ecr registery

--- a/helm/chart/templates/replica-set.yml
+++ b/helm/chart/templates/replica-set.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       initContainers:
         - name: parameters-pull
-          image: docker.io/madhanmohanreddyeeda/github-repo-parameter-store-init-container-image
+          image: 512646826903.dkr.ecr.us-east-1.amazonaws.com/parameter-store-init-container-image:v1.0.6
           imagePullPolicy: Always
           volumeMounts:
             - mountPath: /parameters
@@ -26,7 +26,7 @@ spec:
               value: {{ .Values.PARAMS }}
       containers:
         - name: {{ .Values.component }}
-          image: madhanmohanreddyeeda/github-repo-{{ .Values.component }}
+          image: 512646826903.dkr.ecr.us-east-1.amazonaws.com/user:v1.0.5
           imagePullPolicy: Always
           resources:
             requests:
